[gd_scene load_steps=12 format=3 uid="uid://curu0ndmykruo"]

[ext_resource type="Script" path="res://game/scripts/visual_novel_ui_manager.gd" id="1_aumcv"]
[ext_resource type="Script" path="res://game/scripts/visual_novel_text_box.gd" id="1_vdovu"]
[ext_resource type="PackedScene" uid="uid://848mthycpywe" path="res://game/scenes/visual_novel_character.tscn" id="2_5nxu0"]
[ext_resource type="Script" path="res://game/scripts/dialogue_text.gd" id="2_kp8qa"]
[ext_resource type="Script" path="res://game/scripts/visual_novel_background_texture.gd" id="2_qggvc"]
[ext_resource type="Shader" path="res://game/assets/shaders/visual_novel_ui_manager.gdshader" id="3_bf5l3"]
[ext_resource type="PackedScene" uid="uid://dv3vw4q58giyr" path="res://game/scenes/visual_novel_panel_texture.tscn" id="3_y50n2"]
[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="4_atqtx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ylve"]
shader = ExtResource("3_bf5l3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u62gj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0twlk"]
bg_color = Color(0.31802, 0.31802, 0.31802, 1)

[node name="VisualNovelUIManager" type="CanvasLayer"]
script = ExtResource("1_aumcv")
vn_character = ExtResource("2_5nxu0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3ylve")
offset_right = 1280.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="BackgroundTexture" type="TextureRect" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qggvc")

[node name="VisualNovelCharacters" type="Node2D" parent="."]
z_index = 3

[node name="VisualNovelPanelTexture" parent="." instance=ExtResource("3_y50n2")]

[node name="SettingsButton" type="TextureButton" parent="."]
z_index = 2
offset_left = 1240.0
offset_right = 1280.0
offset_bottom = 40.0

[node name="LogButton" type="TextureButton" parent="."]
z_index = 2
offset_left = 1240.0
offset_right = 1280.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 4
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -220.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
metadata/_edit_group_ = true

[node name="VisualNovelTextBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("1_vdovu")

[node name="NameText" type="RichTextLabel" parent="MarginContainer/VisualNovelTextBox"]
layout_mode = 2
theme = ExtResource("4_atqtx")
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_u62gj")
bbcode_enabled = true
text = "Someone's Name
"
fit_content = true
scroll_active = false
text_direction = 1

[node name="LineText" type="RichTextLabel" parent="MarginContainer/VisualNovelTextBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_atqtx")
theme_override_constants/line_separation = 10
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0twlk")
bbcode_enabled = true
text = "You see, I'm a strangle old man. I like flowers, I like the sun, I like the feeling of the cool wind on my face."
scroll_active = false
script = ExtResource("2_kp8qa")

[node name="NormalDialogueTimer" type="Timer" parent="MarginContainer/VisualNovelTextBox/LineText"]
wait_time = 0.1

[node name="SlowDialogueTimer" type="Timer" parent="MarginContainer/VisualNovelTextBox/LineText"]
wait_time = 0.3

[node name="PauseDialogueTimer" type="Timer" parent="MarginContainer/VisualNovelTextBox/LineText"]

[node name="Button" type="Button" parent="."]
z_index = 4
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="SettingsButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="LogButton" to="." method="_on_log_button_pressed"]
